--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "tymon/jwt-auth": "0.5.*"
+        "tymon/jwt-auth": "0.5.*",
+        "laravel-notification-channels/onesignal": "^1.0",
+        "berkayk/onesignal-laravel": "^0.9.7"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
