--- a/.env2
+++ b/.env2
@@ -30,3 +30,15 @@ MAIL_ENCRYPTION=null
 PUSHER_KEY=
 PUSHER_SECRET=
 PUSHER_APP_ID=
+
+ONESIGNAL_APP_ID=9c9c55f8-cd80-461f-94b5-557e9204c8f2
+ONESIGNAL_REST_API_KEY=Yzc3YTZiN2ItY2U4OS00MDgwLWEyM2ItZDE0MmY2ZDM1M2Ri
+ONESIGNAL_USER_AUTH_KEY=YjU1ZDczZjUtZjViOC00YjQyLWFlZWItZDM2ZWYyZTI1ZDUy
+
+PAYU_TESTING_ENV=true
+PAYU_MERCHANT_ID=508029
+PAYU_API_LOGIN=pRRXKOl8ikMmt9u
+PAYU_API_KEY=4Vj8eK4rloUd272L48hsrarnUA
+PAYU_ACCOUNT_ID=512321
+PAYU_COUNTRY=CO
+PSE_REDIRECT_URL, ''
