--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "tymon/jwt-auth": "0.5.*",
         "laravel-notification-channels/onesignal": "^1.0",
         "guzzlehttp/guzzle": "~6.0",
-        "alexo/laravel-payu": "^1.0"
+        "alexo/laravel-payu": "^1.0",
+        "epayco/epayco-php": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -24,7 +25,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Epayco\\" : "src/"
         }
     },
     "autoload-dev": {
